--- a/config/database.yml
+++ b/config/database.yml
@@ -13,20 +13,21 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  host: <%= ENV.fetch("DB_HOST") { "localhost" } %>
+  username: <%= ENV.fetch("MYSQL_USER") %>
+  password: <%= ENV.fetch("MYSQL_PASSWORD") %>
+  host: <%= ENV.fetch("DB_HOST") { "127.0.0.1" } %>
+  port: 3306
 
 development:
   <<: *default
-  database: scrapper_engine_development
+  database: scrapper_core_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: scrapper_engine_test
+  database: scrapper_core_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -45,11 +46,8 @@ test:
 #   production:
 #     url: <%= ENV["MY_APP_DATABASE_URL"] %>
 #
-# Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
-# for a full overview on how database connection configuration can be specified.
+# Read http on how database connection configuration can be specified.
 #
 production:
   <<: *default
-  database: scrapper_engine_production
-  username: scrapper_engine
-  password: <%= ENV["SCRAPPER_ENGINE_DATABASE_PASSWORD"] %>
+  database: scrapper_core_production
