feat: ignore credentials and keys

--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,5 @@
 !/tmp/storage/.keep
 
 # Ignore master key for decrypting credentials and more.
-/config/master.key
+/config/**/*.key
+/config/**/*.yml.enc
